--- a/css/sparky-2623bf.webflow.css
+++ b/css/sparky-2623bf.webflow.css
@@ -1376,12 +1376,14 @@ figcaption {
 .header36_component {
   z-index: 4;
   grid-column-gap: 0rem;
+  flex-flow: row;
   grid-template-rows: auto;
   grid-template-columns: 1fr 1fr;
   grid-auto-columns: 1fr;
+  justify-content: space-between;
   align-items: center;
   min-height: 100svh;
-  display: grid;
+  display: flex;
   position: relative;
 }
 
@@ -3801,15 +3803,7 @@ figcaption {
   }
 }
 
-#w-node-_0fb26de9-51c4-8045-8441-58c7e24345eb-918c28c4 {
-  justify-self: end;
-}
-
-#w-node-c5a2192b-b465-3fe9-c8dd-6a9163d8c9fe-918c28c4 {
-  justify-self: start;
-}
-
-#w-node-_0dd53094-cd01-2547-265f-a9b727a83c50-918c28c4 {
+#w-node-_0fb26de9-51c4-8045-8441-58c7e24345eb-918c28c4, #w-node-_0dd53094-cd01-2547-265f-a9b727a83c50-918c28c4 {
   justify-self: end;
 }
 
