--- a/css/sparky-2623bf.webflow.css
+++ b/css/sparky-2623bf.webflow.css
@@ -2677,8 +2677,11 @@ figcaption {
 
   .header36_component {
     grid-row-gap: 4rem;
+    flex-flow: column;
     grid-template-columns: 1fr;
     grid-auto-flow: row;
+    justify-content: space-between;
+    align-items: flex-start;
     min-height: auto;
     padding-top: 8rem;
   }
